[tool.poetry]
name = "pubmed-paper-fetcher-supri267"
version = "0.1.1"
description = "A Python program to fetch research papers from PubMed with non-academic authors affiliated with pharmaceutical or biotech companies."
authors = ["Supriya <akkalasupriya3@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "pubmed_paper_fetcher" }]

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
